# TrinityCore

./: 9999_99_99_99_vashjir.sql  CMakeLists.txt
cmake/Modules/: gtest.cmake
sql/updates/world/3.3.5/: 2018_10_19_00_world_COT_STRATHOLME.sql  2020_02_15_03_world_335.sql  2020_02_15_04_world_COT_STRATHOLME.sql  2020_02_15_05_world_COT_STRATHOLME_SPLINECHAINS.sql  2020_07_15_01_world_335.sql  2020_12_13_00_GH_Vordrassil_Chain.sql  2020_12_30_dungeon_rep.sql  2021_01_01_00_hodir_quests.sql  2021_01_06_00_Dungeon_iLevel_Req.sql
sql/updates/world/3.3.5_pending/: 9999_99_99_99_world_COT_STRATHOLME.sql
src/server/: CMakeLists.txt
src/server/game/Entities/Creature/: Creature.cpp
src/server/game/Entities/Pet/: Pet.cpp
src/server/game/Entities/Player/: Player.cpp
src/server/game/Entities/Unit/: Unit.cpp
src/server/game/Scripting/: ScriptMgr.cpp  ScriptMgr.h
src/server/game/Spells/: SpellEffects.cpp  SpellInfo.cpp  SpellMgr.cpp
src/server/game/World/: World.cpp  World.h
src/server/gameTest/: CMakeLists.txt  PlayerTest.cpp  WorldSessionTest.cpp  gameTest.cc  gameTest.cpp
src/server/scripts/Custom/: AutoLearnOnLevel.cpp  Solocraft.cpp  VAS_AutoBalance.cpp  custom_script_loader.cpp
src/server/scripts/Kalimdor/: kalimdor_script_loader.cpp
src/server/scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/: hyjal.h
src/server/scripts/Kalimdor/CavernsOfTime/CullingOfStratholme/: boss_chrono_lord_epoch.cpp  boss_infinite_corruptor.cpp  boss_mal_ganis.cpp  boss_meathook.cpp  boss_salramm_the_fleshcrafter.cpp  crate-fluff.txt  crate-fluff2.txt  culling_of_stratholme.cpp  culling_of_stratholme.h  instance_culling_of_stratholme.cpp  npc_arthas.cpp  sniff-malganis-talk.txt  spellsniff.txt  wavepos3.txt
src/server/scripts/Kalimdor/CavernsOfTime/TheBlackMorass/: instance_the_black_morass.cpp
src/server/scripts/Northrend/: northrend_script_loader.cpp
src/server/scripts/Northrend/CrusadersColiseum/TrialOfTheChampion/: boss_argent_challenge.cpp  boss_argent_challenge_fix.cpp  boss_black_knight.cpp  boss_black_knight_fix.cpp  boss_grand_champions.cpp  boss_grand_champions_fix.cpp  instance_trial_of_the_champion.cpp  instance_trial_of_the_champion_fix.cpp  trial_of_the_champion.cpp  trial_of_the_champion.h  trial_of_the_champion_fix.cpp  trial_of_the_champion_fix.h
src/server/scripts/Northrend/Gundrak/: boss_gal_darah.cpp
src/server/scripts/Outland/: zone_shadowmoon_valley.cpp
src/server/worldserver/: worldserver.conf.dist
src/server/worldserverMoq/: CMakeLists.txt  MoqAsyncAcceptor.cpp  MoqAsyncAcceptor.h  MoqWorldSocketMgr.cpp  MoqWorldSocketMgr.h  WorldServerMoq.cpp  WorldServerMoq.h  main_moq.cpp  main_moq.h
src/server/worldserverTest/: CMakeLists.txt  FreezeDetector.cpp  FreezeDetector.h  WorldServerMoqTest.cpp  mainTest.cpp  main_moq.cpp  main_moq.h  worldserverTest.cpp
(+1 files in other folders)
